# SoDeLe

./: .env.template  .flake8  .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README.md  buildAsExe.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: DEU_SN_Leipzig.Holzhausen.104710_TMYx.epw  testInput.json
docs/testInput_result/: result.json
frontend/: Sodele_Eingabe_erweitert_v2.xlsm  Sodele_Eingabe_erweitert_v2_1.xlsm  Sodele_Input_DE_extended.xlsm  Sodele_Input_DE_simplified.xlsm
precompiled_with_frontend/: Sodele_Input_DE_extended.xlsm  Sodele_Input_DE_simplified.xlsm
precompiled_with_frontend/Wetter/: LICENSE.md
sodele/: PVSImulation.py  __init__.py
sodele/Config/: __init__.py
sodele/Helper/: __init__.py
sodele/Objects/: PhotovoltaicConfig.py  PhotovoltaicPlant.py  SodeleInput.py  WeatherData.py  __init__.py
sodele/res/PV_Database/: 221115_CEC_Inverters.csv  ReadMe.txt
sodele/res/try/regions/: TRY2035_0003_Jahr.meta.json  TRY2035_0005_Jahr.meta.json  TRY2035_0009_Jahr.meta.json  (+1787 more)
src/: calculation_test.json  test.py
src/dbi/: dbi_connect_get_token.py  dbi_fetch_weather_data.py
src/sodele/: PVSImulation.py  __init__.py  generatePVDatabase.py
src/sodele/Helper/: dictor.py  optionsConcstructor.py
src/sodele/Objects/: PhotovoltaicPlant.py  SodeleInput.py  WeatherData.py
src/sodele/core/: generate_pv_database.py  pv_simulation.py  weather_data_reader.py
src/sodele/interfaces/: pv_results.py  pv_specifics.py  sodele_input.py  weather_data.py
src/sodele/misc/: database.py
(+1545 files in other folders)
