[tool.black]
line-length = 240

[tool.poetry]
name = "sodele"
version = "2.0.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.mypy]
files = "src"
strict = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

[tool.poetry.dependencies]
python = "^3.12"
pvlib = "0.9.5"
numpy = "^1.24.3"
pandas = "^2.0.1"
openpyxl = "3.1.2"
pyproj = "^3.5.0"
geopy = "2.3.0"
xlsxwriter = "^3.0.1"
click = "8.1.7"
pydantic = "^2.10.6"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.15.0"
pandas-stubs = "^2.2.3.241126"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
